post(ece upper year courses): add TEP444 description

--- a/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
+++ b/src/content/posts/2025-01-25-uoft-ece-upper-year-course-planning-tips/index.mdx
@@ -28,7 +28,26 @@ I've taken a lot of courses from my time in UofT ECE (most of them were about so
 
 <hr/>
 
-## Operating Systems (ECE344)
+## Courses
+
+- **Technical Courses**
+  - [ECE344 Operating Systems](#ece344-operating-systems)
+  - [ECE345 Algorithms & Data Structures](#ece345-algorithms--data-structures)
+  - [ECE302 Probability and Applications](#ece302-probability-and-applications)
+  - [CSC343 Introduction to Databases](#csc343-introduction-to-databases)
+  - [APS360 Artificial Intelligence Fundamentals](#aps360-artificial-intelligence-fundamentals)
+  - [ECE421 Introduction to Machine Learning](#ece421-introduction-to-machine-learning)
+  - [ECE568 Computer Security](#ece568-computer-security)
+  - [ECE326 Programming Languages](#ece326-programming-languages)
+  - [ECE419 Distributed Systems](#ece419-distributed-systems)
+  - [ECE444 Software Engineering](#ece444-software-engineering)
+- **Recommended HSS/CS/Natural Science Courses**
+  - [TEP444 Positive Psychology for Engineers](#tep444-positive-psychology-for-engineers)
+  - *...more to be added soon!*
+
+<hr/>
+
+## ECE344 Operating Systems
 
 ### TL;DR
 
@@ -50,7 +69,7 @@ Take it in the fall when Jon Eyolfson is teaching. Ding Yuan coordinates the cou
 
 <hr/>
 
-## Algorithms & Data Structures (ECE345)
+## ECE345 Algorithms & Data Structures
 
 ### TL;DR
 
@@ -76,7 +95,7 @@ Take it in fall for the better lectures, overall better organization, and to hel
 
 <hr/>
 
-## Probability and Applications (ECE302)
+## ECE302 Probability and Applications
 
 ### TL;DR
 
@@ -102,7 +121,7 @@ Course content is largely identical in both fall and winter (there are some slig
 
 <hr/>
 
-## Introduction to Databases (CSC343)
+## CSC343 Introduction to Databases
 
 ### TL;DR
 
@@ -122,7 +141,7 @@ The course is virtually identical in both fall and winter, so you have the freed
 
 <hr/>
 
-## Artificial Intelligence Fundamentals (APS360)
+## APS360 Artificial Intelligence Fundamentals
 
 ### TL;DR
 
@@ -138,9 +157,9 @@ There are some PyTorch labs in the course, done using Jupyter Notebooks running 
 
 <hr/>
 
-## Introduction to Machine Learning (ECE421)
+## ECE421 Introduction to Machine Learning
 
-<Callout type="destructive" icon="lucide:alert-triangle" classes="border-red-950/70 bg-red-100/50 dark:border-red-100/50 dark:bg-red-950/40">
+<Callout type="destructive" icon="lucide:alert-triangle">
   I haven't taken this course yet, so I can only speak about what I've heard from others and what I've seen about the course posted online.
 </Callout>
 
@@ -148,7 +167,7 @@ I don't have firsthand experience with ECE421 yet (it's slotted for my winter te
 
 <hr/>
 
-## Computer Security (ECE568)
+## ECE568 Computer Security
 
 ### TL;DR
 
@@ -168,7 +187,7 @@ The course is virtually identical in both fall and winter, so you have the freed
 
 <hr/>
 
-## Programming Languages (ECE326)
+## ECE326 Programming Languages
 
 ### TL;DR
 
@@ -176,7 +195,7 @@ This course is one of the least useful out of all those offered in area 6 (and I
 
 <hr/>
 
-## Distributed Systems (ECE419)
+## ECE419 Distributed Systems
 
 ### TL;DR
 
@@ -188,7 +207,7 @@ This was one of the most time-consuming courses in it's previous form, and knowi
 
 One of the most time-consuming courses in undergrad, the course primarily consisted of a semester-long project where you actually build a distributed database from scratch using Java in a team of 3.
 
-<Callout type="info" icon="lucide:star" classes="border-yellow-950/100 bg-yellow-100 dark:border-yellow-100/100 dark:bg-yellow-950">
+<Callout type="warning" icon="lucide:star">
   Here's the project me and my team worked on for ECE419 in 2024: https://github.com/sadmanca/eagerDB
   
   The whole project thing in ECE419 was actually really cool (despite it being overwhelmingly time-consuming it was nice to have something to show for all of it), I think it's a real bummer Goel got rid of it when he overhauled the course.
@@ -204,9 +223,9 @@ Another great thing about this course is that it gives you a chance to use what 
 
 <hr/>
 
-## Software Engineering (ECE444)
+## ECE444 Software Engineering
 
-<Callout type="destructive" icon="lucide:alert-triangle" classes="border-red-950/70 bg-red-100/50 dark:border-red-100/50 dark:bg-red-950/40">
+<Callout type="destructive" icon="lucide:alert-triangle">
   I haven't taken this course yet, so I can only speak about what I've heard from others and what I've seen about the course posted online.
 </Callout>
 
@@ -220,12 +239,67 @@ In general, what you learn about in ECE444 is more along the lines of product/pr
 
 <hr/>
 
-## Recommended HSS/CS/Natural Science Courses
+### Recommended HSS/CS/Natural Science Courses
 
 - TEP444/TEP442
 - TEP343
 - ENT200
 - CIV220/CIV300
+
+## TEP444 Positive Psychology for Engineers
+
+<Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950"> 
+**Note:** TEP444 (Fall/Summer) and TEP442 (Winter) are basically the same course with different labels (“happiness” vs. “leadership” themes). The structure, workload, and grading are all identical. Choose whichever fits your schedule.
+
+I don't mention TEP442 (for brevity), but rest assured everything that applies to TEP444 also applies to TEP442 (except of course for some reason TEP442 is less well-known, probably because it's course code isn't used for the summer course). 
+</Callout>
+
+### TL;DR
+
+Go to 3 in-person lectures, then meet up with your team once a week, write a reflection, and that's it (really, that's the entire course). Despite being a bird course, TEP444 is a surprisingly reflective and (lowkey) wholesome course. You’ll learn about concepts like happiness, self-awareness, and well-being, but more importantly, you’ll learn about yourself. You’re basically rewarded for introspection in the refelctions, and if you just do the weekly worksheets and put in the minimum team effort, you’re almost guaranteed an A-. That said, getting above an A- (i.e. ≥85) is actually pretty hard and will require a lot of thought, writing, and some luck with grading. Still, a fantastic GPA-saver in a busy term.
+
+
+<Callout type="info" classes="border-grey-950/100 bg-grey-100 dark:border-grey-100/100 dark:bg-grey-950"> 
+**Note:** the way grading works in this course is that, for each weekly reflection assignment, there are 4-5 worksheets that each correspond to a letter grade (e.g. A/A+, A-, B+, B, C); for each assignment, you choose which worksheet you want to submit, and then based on how meaningful your writing was you'll either get the letter grade of the worksheet that you completed or something lower. 
+
+For the A/A+ worksheets, 9/10 times you'll just get an A- despite your effort because there's a *lot* of competition amongst students to get that A/A+ (as for why, I'm not sure, maybe they're 4.0 GPA-ers; personally my philosophy is that this course is a really good way to get a decent mark for minimal effort, I think it's foolish to try to get the highest possible mark by also putting in loads of effort). 
+
+For the other worksheets, you'll pretty much always get exactly whatever letter grade the worksheet corresponds to unless it's obvious you put little to no effort in the worksheet. 
+</Callout>
+
+<Callout type="flag"> 
+**What do the weekly worksheet assignments consist of?** 
+
+The worksheets are just a set of questions to reflect on your weekly experiences and meetings with your team. The way they work is that the B worksheet contains all of the questions in the C worksheet, the B+ worksheet contains all of the questions in the B and C worksheet, and so on and so forth. 
+
+The questions are very open-ended (e.g.), so you have lots of freedom in how you can structure your responses (which also means that the grading rubric is vague as heck and you'll get graded based on how "meaningful" your reflections are). 
+
+One thing to note is that just because you put a ton of effort into writing a reflection, that doesn't necessarily translate to an A/A+ (but will most likely land you an A-, it's just for that A/A+ you're competing with everyone else gunning for the same mark).
+</Callout>
+
+### What you learn
+
+Not that much in terms of content, but that’s the point. TEP444 is all about reflection. You’ll be engaging with weekly themes related to happiness, engineering identity, and personal growth. Think mindfulness, teamwork, values, etc. The only “academic” part of the course is writing about your thoughts on those topics after doing a weekly activity with your group.
+
+It’s surprisingly helpful in developing soft skills, things you rarely get a chance to slow down and think about in engineering. Whether or not that’s your vibe, it’s still an easy A- if you just go through the motions.
+
+### What you do
+
+Each week, you meet with your team (can be in person or async if that's a provided option for that week, which it only was for 2 weeks back when I took the course in 2023), do some kind of activity (you can actually do something fun like go out to a park, or just make it up... no one checks, except for requiring a team photo from the meeting in your weekly submission), and then write a reflection worksheet. These reflections are where all of your mark comes from (part of it is also how much the prof likes you). The prof grades based on how “deep” and “meaningful” your insights are (yes, it’s subjective), so it helps to get a bit poetic.
+
+There are only 3 actual lectures at the start of the term (technically speaking only the 3rd is “mandatory” since you form your teams then, but you will want/*need* to go for the earlier ones because the activities you do in them will be referenced in later worksheets), and possibly one more in the last week. Other than that, it’s all self-directed.
+
+In the summer version, the course runs over just 2 months instead of 4, so you’re doing ~2 assignments per week instead of one, but the content and expectations are the same. Slightly more condensed, but still totally doable.
+
+You’ll probably spend around 5–6 hours total per week: ~2–3 hours meeting/doing the activity and ~3 hours writing your reflection. If you’re just aiming for a low A-range grade, that’s all you really need.
+
+### When to take it
+
+Take it in the summer if you can; it’s easier to focus on the weekly work without the distraction of other courses, and the condensed format means it’s over faster. Plus, it’s one of the rare courses that’s actually fun to do when you’re not stressed out.
+
+In Fall/Winter, it's still very manageable, just slightly more drawn out. Just be aware: this course fills up fast on Acorn *in every semester*, so you’ll need to smash that enroll button the second your enrollment window opens. Like, be on Acorn and start clicking before the clock hits the hour. Seriously, if you've never enrolled in a course on Acorn, I cannot stress enough that TEP444 fills up in seconds.
+
+If you’re okay with settling for an A-, it’s a bird. If you’re gunning for 90+, be prepared to grind (and compete with grad students and others aiming for the same).
 
 <Callout type="destructive">
   *This section is currently under construction!*
